assets/css/common.css
/**
 * danwa common.css, 2015, Robin de Graaf, devvoh.com
 */

/* general */
* {
    position: relative;
    padding: 0;
    margin: 0;
}
html, body {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    font-size: 11pt;
}
a {
    color: #4f2391;
}
a:link, a:visited {
    text-decoration: none;
}

.width-site {
    width: 650px;
    max-width: 95%;
    margin: auto;
}

.site-header {
    background-color: #4f2391;
    line-height: 64px;
    height: 64px;
    overflow: hidden;
}
.site-header svg {
    margin-top: 12px;
    height: 48px;
    fill: white;
}
.site-header nav {
    font-size: 1.4em;
    float: right;
}
.site-header nav i {
    color: rgba(255, 255, 255, 0.5);
}
.site-header nav i:hover {
    color: rgba(255, 255, 255, 0.8);
}

/* page */
.page {
    margin-top: 10px;
}
/* post styles */
.post {
    display: block;
    clear: both;
    padding: 10px 0;
}
.post-user-avatar {
    width: 64px;
    margin-right: 10px;
}
.post-user-avatar img {
    width: 100%;
}

